--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,14 +1,27 @@
-# Data Source Properties
-server.port=8080
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+## Data Source Properties
+#server.port=8080
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+#spring.datasource.username=gourav
+#spring.datasource.password=gourav
+#
+## To create table dynamically
+#spring.jpa.hibernate.ddl-auto=update
+#
+## To print queries on console
+#spring.jpa.show-sql=true
+#
+## Hibernate Dialect for Oracle
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+
+spring.datasource.url = jdbc:mysql://localhost:3306/gourav
 spring.datasource.username=gourav
 spring.datasource.password=gourav
+#spring.datasource.driver-class-name=om.mysql.cj.jdbc.Driver
 
-# To create table dynamically
+ 
+
 spring.jpa.hibernate.ddl-auto=update
 
-# To print queries on console
 spring.jpa.show-sql=true
 
-# Hibernate Dialect for Oracle
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+ 
